Bug 441464 - [Wayland] User can trigger screen edges in fullscreen games that capture the mouse cursor
Summary: [Wayland] User can trigger screen edges in fullscreen games that capture the ...
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: wayland-generic (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
: 421642 (view as bug list)
Depends on:
Blocks:
 
Reported: 2021-08-24 06:38 UTC by guimarcalsilva
Modified: 2024-03-10 16:40 UTC (History)
7 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.25
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description guimarcalsilva 2021-08-24 06:38:05 UTC
SUMMARY


STEPS TO REPRODUCE
1. Open any game on a Wayland session (like 0AD)
2. Make it fullscreen
3. As an example, move the cursor to the top left corner (the default action is to show open windows)

OBSERVED RESULT

Screen edge effect is triggered

EXPECTED RESULT

It should work just like it does on X11. The screen edge effect shouldn't be triggered in fullscreen games that capture the mouse cursor. This is especially troublesome for RTS games like 0AD that allows moving the camera by touching the cursor on screen edges.

SOFTWARE/OS VERSIONS
Operating System: KDE neon 5.22
KDE Plasma Version: 5.22.4
KDE Frameworks Version: 5.85.0
Qt Version: 5.15.3
Kernel Version: 5.11.0-27-generic (64-bit)
Graphics Platform: Wayland
Processors: 4 × Intel® Core™ i5-6200U CPU @ 2.30GHz
Memory: 3.7 GiB of RAM
Graphics Processor: Mesa Intel® HD Graphics 520
Comment 1 shatz.dan 2022-01-08 13:15:25 UTC
Also affected with similar hardware, on Plasma 5.23.80
Comment 2 Patrick Silva 2022-04-01 16:43:22 UTC
possibly duplicate of bug 441287
Comment 3 Nate Graham 2022-04-03 17:29:13 UTC
Not sure it's a direct duplicate, but definitely related.
Comment 4 notrealname 2022-04-25 14:42:50 UTC
I have had the same issue playing dota2 on wayland.
Comment 5 Aleix Pol 2022-05-11 15:07:09 UTC
Git commit 946087ef37957055af40af3a8378d67d2ea69c0e by Aleix Pol.
Committed on 11/05/2022 at 14:54.
Pushed by apol into branch 'master'.

Inhibit edges when the active window is full screen by default

At the moment we trigger the edges even when the active window is full
screen which is unfortunate when running certain games, for example when
you're attacking the village at the north-east in Age of Empires and you
have the Overview effect on.

This changes the default to inhibit them (like we used to just do for
sides but not corners for some reason) and adds a checkbox to restore
them even in that case.

M  +18   -2    src/kcmkwin/kwinscreenedges/kwinscreenedgeconfigform.cpp
M  +5    -0    src/kcmkwin/kwinscreenedges/kwinscreenedgeconfigform.h
M  +5    -0    src/kcmkwin/kwinscreenedges/kwinscreenedgesettings.kcfg
M  +3    -0    src/kcmkwin/kwinscreenedges/main.cpp
M  +43   -23   src/kcmkwin/kwinscreenedges/main.ui
M  +5    -0    src/kwin.kcfg
M  +16   -10   src/screenedge.cpp
M  +3    -0    src/screenedge.h

https://invent.kde.org/plasma/kwin/commit/946087ef37957055af40af3a8378d67d2ea69c0e
Comment 6 Patrick Silva 2022-08-27 14:07:40 UTC
*** Bug 421642 has been marked as a duplicate of this bug. ***
Comment 7 Patrick Silva 2022-10-26 15:00:04 UTC
This bug is not completely fixed. I can reproduce with Nexuiz Classic from flathub.

https://flathub.org/apps/details/com.alientrap.nexuiz-classic

Operating System: Arch Linux
KDE Plasma Version: 5.26.2
KDE Frameworks Version: 5.99.0
Qt Version: 5.15.6
Graphics Platform: Wayland
Comment 8 adr.fantini 2023-05-16 12:40:02 UTC
I can still reproduce this. No problems on X, but on Wayland this makes gaming almost impossible, if you have active screen edges.
Comment 9 hazelnot 2024-03-10 14:18:04 UTC
This is now happening again, on Plasma 6.0.1 on EndeavourOS
Comment 10 hazelnot 2024-03-10 14:20:49 UTC
Forgot to add that now it doesn't actually open the overview, but causes the mouse cursor to get stuck in the top-left corner in some cases, while in others (such as Red Alert 2) the mouse will periodically "blink" to the corner and back
Comment 11 hazelnot 2024-03-10 16:40:04 UTC
It seems like I was wrong, it's a different bug. I apologize.